--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <!-- Portfolio Item 1 -->
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-content h-100">
-              <img src="assets/img/portfolio/Prueba1.png" class="img-fluid" alt="Project 1 preview image">
+              <img src="assets/img/Prueba1.png" class="img-fluid" alt="Project 1 preview image">
               <div class="portfolio-info">
                 <h4>Album cover rug</h4>
                 <p><!-- TODO: Short description (2–3 sentences) --></p>
@@ -124,7 +124,7 @@
           <!-- Portfolio Item 2 -->
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-content h-100">
-              <img src="assets/img/portfolio/Dureza2.jpg" class="img-fluid" alt="Project 2 preview image">
+              <img src="assets/img/Dureza2.jpg" class="img-fluid" alt="Project 2 preview image">
               <div class="portfolio-info">
                 <h4>Test of steel strenght</h4>
                 <p><!-- TODO: Short description (2–3 sentences) --></p>
@@ -135,7 +135,7 @@
           <!-- Portfolio Item 3 -->
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-content h-100">
-              <img src="assets/img/portfolio/facultad.jpg" class="img-fluid" alt="Project 3 preview image">
+              <img src="assets/media/WhatsApp Video 2025-11-16 at 17.23.07.mp4" class="img-fluid" alt="Project 3 preview image">
               <div class="portfolio-info">
                 <h4>Another try</h4>
                 <p><!-- TODO: Short description (2–3 sentences) --></p>
@@ -177,4 +177,5 @@
   <script src="assets/js/main.js"></script>
 
 </body>
+
 </html>
