--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <!-- Portfolio Item 1 -->
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-content h-100">
-              <img src="assets/img/Prueba1.png" class="img-fluid" alt="Project 1 preview image">
+              <img src="assets/img/RUG.jpeg" class="img-fluid" alt="Project 1 preview image">
               <div class="portfolio-info">
                 <h4>Album cover rug</h4>
                 <p><!-- TODO: Short description (2–3 sentences) --></p>
@@ -124,9 +124,9 @@
           <!-- Portfolio Item 2 -->
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-content h-100">
-              <img src="assets/img/Dureza2.jpg" class="img-fluid" alt="Project 2 preview image">
+              <img src="assets/img/VINYL.jpeg" class="img-fluid" alt="Project 2 preview image">
               <div class="portfolio-info">
-                <h4>Test of steel strenght</h4>
+                <h4>My vinyl colection</h4>
                 <p><!-- TODO: Short description (2–3 sentences) --></p>
               </div>
             </div>
@@ -135,9 +135,9 @@
           <!-- Portfolio Item 3 -->
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-content h-100">
-              <img src="assets/media/WhatsApp Video 2025-11-16 at 17.23.07.mp4" class="img-fluid" alt="Project 3 preview image">
+              <img src="assets/img/ENOLA.jpeg" class="img-fluid" alt="Project 3 preview image">
               <div class="portfolio-info">
-                <h4>Another try</h4>
+                <h4>Enola</h4>
                 <p><!-- TODO: Short description (2–3 sentences) --></p>
               </div>
             </div>
@@ -179,3 +179,4 @@
 </body>
 
 </html>
+
