--- a/index.html
+++ b/index.html
@@ -103,48 +103,49 @@
     <!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio section">
-      <div class="container" data-aos="fade-up">
-        <h2>Portfolio</h2>
-        <p>Here are some of my projects and works.</p>
+<section id="portfolio" class="portfolio section">
+  <div class="container" data-aos="fade-up">
+    <h2>Portfolio</h2>
+    <p>Here are some of my projects and works.</p>
 
-        <div class="row gy-4 isotope-container">
+    <div class="row gy-4 isotope-container">
 
-          <!-- Portfolio Item 1 -->
-          <div class="col-lg-4 col-md-6 portfolio-item">
-            <div class="portfolio-content h-100">
-              <img src="assets/img/RUG.jpeg" class="img-fluid" alt="Project 1 preview image">
-              <div class="portfolio-info">
-                <h4>Album cover rug</h4>
-                <p><!-- TODO: Short description (2–3 sentences) --></p>
-              </div>
-            </div>
-          </div>
-
-          <!-- Portfolio Item 2 -->
-          <div class="col-lg-4 col-md-6 portfolio-item">
-            <div class="portfolio-content h-100">
-              <img src="assets/img/VINYL.jpeg" class="img-fluid" alt="Project 2 preview image">
-              <div class="portfolio-info">
-                <h4>My vinyl colection</h4>
-                <p><!-- TODO: Short description (2–3 sentences) --></p>
-              </div>
-            </div>
-          </div>
-
-          <!-- Portfolio Item 3 -->
-          <div class="col-lg-4 col-md-6 portfolio-item">
-            <div class="portfolio-content h-100">
-              <img src="assets/img/ENOLA.jpeg" class="img-fluid" alt="Project 3 preview image">
-              <div class="portfolio-info">
-                <h4>Enola</h4>
-                <p><!-- TODO: Short description (2–3 sentences) --></p>
-              </div>
-            </div>
+      <!-- Portfolio Item 1 -->
+      <div class="col-lg-4 col-md-6 portfolio-item">
+        <div class="portfolio-content h-100">
+          <img src="assets/img/RUG.jpeg" class="img-fluid" width="200" height="300" alt="Project 1 preview image">
+          <div class="portfolio-info">
+            <h4>Album cover rug</h4>
+            <p><!-- TODO: Short description (2–3 sentences) --></p>
           </div>
         </div>
       </div>
-    </section>
+
+      <!-- Portfolio Item 2 -->
+      <div class="col-lg-4 col-md-6 portfolio-item">
+        <div class="portfolio-content h-100">
+          <img src="assets/img/VINYL.jpeg" class="img-fluid" width="200" height="300" alt="Project 2 preview image">
+          <div class="portfolio-info">
+            <h4>My vinyl collection</h4>
+            <p><!-- TODO: Short description (2–3 sentences) --></p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Portfolio Item 3 -->
+      <div class="col-lg-4 col-md-6 portfolio-item">
+        <div class="portfolio-content h-100">
+          <img src="assets/img/ENOLA.jpeg" class="img-fluid" width="200" height="300" alt="Project 3 preview image">
+          <div class="portfolio-info">
+            <h4>Enola</h4>
+            <p><!-- TODO: Short description (2–3 sentences) --></p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
     <!-- End Portfolio Section -->
 
   </main>
@@ -179,4 +180,5 @@
 </body>
 
 </html>
+
 
