--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <!-- Portfolio Item 1 -->
       <div class="col-lg-4 col-md-6 portfolio-item">
         <div class="portfolio-content h-100">
-          <img src="assets/img/RUG.jpeg" class="img-fluid" width="200" height="300" alt="Project 1 preview image">
+          <img src="assets/img/RUG.jpeg" class="img-fluid"  alt="Project 1 preview image">
           <div class="portfolio-info">
             <h4>Album cover rug</h4>
             <p><!-- TODO: Short description (2–3 sentences) --></p>
@@ -124,7 +124,7 @@
       <!-- Portfolio Item 2 -->
       <div class="col-lg-4 col-md-6 portfolio-item">
         <div class="portfolio-content h-100">
-          <img src="assets/img/VINYL.jpeg" class="img-fluid" width="200" height="300" alt="Project 2 preview image">
+          <img src="assets/img/VINYL.jpeg" class="img-fluid" alt="Project 2 preview image">
           <div class="portfolio-info">
             <h4>My vinyl collection</h4>
             <p><!-- TODO: Short description (2–3 sentences) --></p>
@@ -135,7 +135,7 @@
       <!-- Portfolio Item 3 -->
       <div class="col-lg-4 col-md-6 portfolio-item">
         <div class="portfolio-content h-100">
-          <img src="assets/img/ENOLA.jpeg" class="img-fluid" width="200" height="300" alt="Project 3 preview image">
+          <img src="assets/img/ENOLA.jpeg" class="img-fluid"  alt="Project 3 preview image">
           <div class="portfolio-info">
             <h4>Enola</h4>
             <p><!-- TODO: Short description (2–3 sentences) --></p>
@@ -180,5 +180,6 @@
 </body>
 
 </html>
+
 
 
