--- a/index.html
+++ b/index.html
@@ -108,15 +108,15 @@
     <h2>Portfolio</h2>
     <p>Here are some of my projects and works.</p>
 
-    <div class="row gy-4">
+    <div class="row gy-4 isotope-container">
 
       <!-- Portfolio Item 1 -->
       <div class="col-lg-4 col-md-6 portfolio-item">
         <div class="portfolio-content h-100">
-          <img src="assets/img/RUG.jpeg" class="portfolio-img" alt="Tufted album cover rug project">
+          <img src="assets/img/RUG.jpeg" class="img-fluid" width="200" height="300" alt="Project 1 preview image">
           <div class="portfolio-info">
             <h4>Album cover rug</h4>
-            <p><!-- Add your description here --></p>
+            <p><!-- TODO: Short description (2–3 sentences) --></p>
           </div>
         </div>
       </div>
@@ -124,10 +124,10 @@
       <!-- Portfolio Item 2 -->
       <div class="col-lg-4 col-md-6 portfolio-item">
         <div class="portfolio-content h-100">
-          <img src="assets/img/VINYL.jpeg" class="portfolio-img" alt="Vinyl record collection">
+          <img src="assets/img/VINYL.jpeg" class="img-fluid" width="200" height="300" alt="Project 2 preview image">
           <div class="portfolio-info">
             <h4>My vinyl collection</h4>
-            <p><!-- Add your description here --></p>
+            <p><!-- TODO: Short description (2–3 sentences) --></p>
           </div>
         </div>
       </div>
@@ -135,10 +135,10 @@
       <!-- Portfolio Item 3 -->
       <div class="col-lg-4 col-md-6 portfolio-item">
         <div class="portfolio-content h-100">
-          <img src="assets/img/ENOLA.jpeg" class="portfolio-img" alt="My dog Enola resting on a chair">
+          <img src="assets/img/ENOLA.jpeg" class="img-fluid" width="200" height="300" alt="Project 3 preview image">
           <div class="portfolio-info">
             <h4>Enola</h4>
-            <p><!-- Add your description here --></p>
+            <p><!-- TODO: Short description (2–3 sentences) --></p>
           </div>
         </div>
       </div>
@@ -180,6 +180,7 @@
 </body>
 
 </html>
+
 
 
 
