Change portfolio section to card surface style
Updated the portfolio section to use a card surface style.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
-<section id="portfolio" class="portfolio section">
+<section id="portfolio" class="portfolio section card-surface">
   <div class="container" data-aos="fade-up">
     <h2>Portfolio</h2>
     <p>Here are some of my projects and works.</p>
@@ -180,6 +180,7 @@
 </body>
 
 </html>
+
 
 
 
