--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <section id="about" class="about section">
       <div class="container" data-aos="fade-up">
         <h2>About Me</h2>
+        <a class="btn-custom" href="#portfolio">See my work</a>
         <p>I'm a passionate Materials Engineering student at Universidad Politécnica de Madrid (UPM) with a deep interest
           in structural materials like metals and composites. My curiosity drives me to explore fields such as programming,
           design, and music. I enjoy developing creative projects that combine technical precision with artistic expression.
@@ -180,6 +181,7 @@
 </body>
 
 </html>
+
 
 
 
