--- a/index.html
+++ b/index.html
@@ -56,12 +56,13 @@
     <!-- ======= About Section ======= -->
     <section id="about" class="about section">
       <div class="container" data-aos="fade-up">
+        <div class="col-lg-7 portfolio-info card-surface">
         <h2>About Me</h2>
-        <a class="btn-custom" href="#portfolio">See my work</a>
         <p>I'm a passionate Materials Engineering student at Universidad Politécnica de Madrid (UPM) with a deep interest
           in structural materials like metals and composites. My curiosity drives me to explore fields such as programming,
           design, and music. I enjoy developing creative projects that combine technical precision with artistic expression.
         </p>
+           <a class="btn-custom" href="#portfolio">See my work</a>
       </div>
     </section>
     <!-- End About Section -->
@@ -181,6 +182,7 @@
 </body>
 
 </html>
+
 
 
 
