--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume section light-background">
       <div class="container" data-aos="fade-up">
+        <section id="resume" class="resume section card-surface">
         <h2>Resume</h2>
 
         <div class="row">
@@ -107,6 +108,7 @@
     <!-- ======= Portfolio Section ======= -->
 <section id="portfolio" class="portfolio section card-surface">
   <div class="container" data-aos="fade-up">
+    <section id="portfolio" class="portfolio section card-surface">
     <h2>Portfolio</h2>
     <p>Here are some of my projects and works.</p>
 
@@ -182,6 +184,7 @@
 </body>
 
 </html>
+
 
 
 
