--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
           </div>
 
           <div class="col-lg-6">
+              <section id="resume" class="resume section card-surface">
             <h3 class="resume-title">Experience</h3>
             <div class="resume-item">
               <h4>Camp Monitor</h4>
@@ -108,7 +109,6 @@
     <!-- ======= Portfolio Section ======= -->
 <section id="portfolio" class="portfolio section card-surface">
   <div class="container" data-aos="fade-up">
-    <section id="portfolio" class="portfolio section card-surface">
     <h2>Portfolio</h2>
     <p>Here are some of my projects and works.</p>
 
@@ -116,6 +116,7 @@
 
       <!-- Portfolio Item 1 -->
       <div class="col-lg-4 col-md-6 portfolio-item">
+          <section id="portfolio" class="portfolio section card-surface">
         <div class="portfolio-content h-100">
           <img src="assets/img/RUG.jpeg" class="img-fluid portfolio-img" width="200" height="300" alt="Project 1 preview image">
           <div class="portfolio-info">
@@ -127,6 +128,7 @@
 
       <!-- Portfolio Item 2 -->
       <div class="col-lg-4 col-md-6 portfolio-item">
+          <section id="portfolio" class="portfolio section card-surface">
         <div class="portfolio-content h-100">
           <img src="assets/img/VINYL.jpeg" class="img-fluid portfolio-img" width="200" height="300" alt="Project 2 preview image">
           <div class="portfolio-info">
@@ -138,6 +140,7 @@
 
       <!-- Portfolio Item 3 -->
       <div class="col-lg-4 col-md-6 portfolio-item">
+          <section id="portfolio" class="portfolio section card-surface">
         <div class="portfolio-content h-100">
           <img src="assets/img/ENOLA.jpeg" class="img-fluid portfolio-img" width="200" height="300" alt="Project 3 preview image">
           <div class="portfolio-info">
@@ -184,6 +187,7 @@
 </body>
 
 </html>
+
 
 
 
