Add loader and enhance button styles
Added a loader animation to the page and improved button styling.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
   <link href="assets/css/main.css" rel="stylesheet">
 
 </head>
-
+  
 <body class="index-page">
+    <div id="loader">
+    <div class="loader-circle"></div>
+  </div>
 
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
@@ -62,7 +65,7 @@
           in structural materials like metals and composites. My curiosity drives me to explore fields such as programming,
           design, and music. I enjoy developing creative projects that combine technical precision with artistic expression.
         </p>
-           <a class="btn-custom" href="#portfolio">See my work</a>
+           <a class="btn-custom btn-animated" href="#portfolio">See my work</a>
       </div>
     </section>
     <!-- End About Section -->
@@ -107,7 +110,7 @@
     <!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
-<section id="portfolio" class="portfolio section card-surface">
+<section id="portfolio" class="portfolio section card-surface fade-in">
   <div class="container" data-aos="fade-up">
     <h2>Portfolio</h2>
     <p>Here are some of my projects and works.</p>
@@ -187,6 +190,7 @@
 </body>
 
 </html>
+
 
 
 
