--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
+<!-- Custom CSS File (your changes go here!) -->
+  <link href="assets/css/custom.css" rel="stylesheet">
 </head>
   
 <body class="index-page">
@@ -190,6 +192,7 @@
 </body>
 
 </html>
+
 
 
 
