Add loader script to index.html
Added a loading script to hide the loader after the page loads.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="container" data-aos="fade-up">
         <div class="col-lg-7 portfolio-info card-surface">
         <h2>About Me</h2>
-        <p>I'm a passionate Materials Engineering student at Universidad Politécnica de Madrid (UPM) with a deep interest
+        <p>I'm Guillermo Camacho, a passionate Materials Engineering student at Universidad Politécnica de Madrid (UPM) with a deep interest
           in structural materials like metals and composites. My curiosity drives me to explore fields such as programming,
           design, and music. I enjoy developing creative projects that combine technical precision with artistic expression.
         </p>
@@ -73,13 +73,13 @@
     <!-- End About Section -->
 
     <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume section light-background">
+    <section id="resume" class="resume section light-background fade-in">
       <div class="container" data-aos="fade-up">
         <h2>Resume</h2>
 
         <div class="row">
           <div class="col-lg-6">
-              <section id="resume" class="resume section card-surface">
+              <section class="resume section card-surface">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <!-- TODO: Replace with your info -->
@@ -97,7 +97,7 @@
           </div>
 
           <div class="col-lg-6">
-              <section id="resume" class="resume section card-surface">
+              <section class="resume section card-surface">
             <h3 class="resume-title">Experience</h3>
             <div class="resume-item">
               <h4>Camp Monitor</h4>
@@ -121,7 +121,7 @@
 
       <!-- Portfolio Item 1 -->
       <div class="col-lg-4 col-md-6 portfolio-item">
-          <section id="portfolio" class="portfolio section card-surface">
+          <section class="portfolio section card-surface">
         <div class="portfolio-content h-100">
           <img src="assets/img/RUG.jpeg" class="img-fluid portfolio-img" width="200" height="300" alt="Project 1 preview image">
           <div class="portfolio-info">
@@ -133,7 +133,7 @@
 
       <!-- Portfolio Item 2 -->
       <div class="col-lg-4 col-md-6 portfolio-item">
-          <section id="portfolio" class="portfolio section card-surface">
+          <section  class="portfolio section card-surface">
         <div class="portfolio-content h-100">
           <img src="assets/img/VINYL.jpeg" class="img-fluid portfolio-img" width="200" height="300" alt="Project 2 preview image">
           <div class="portfolio-info">
@@ -145,7 +145,7 @@
 
       <!-- Portfolio Item 3 -->
       <div class="col-lg-4 col-md-6 portfolio-item">
-          <section id="portfolio" class="portfolio section card-surface">
+          <section  class="portfolio section card-surface">
         <div class="portfolio-content h-100">
           <img src="assets/img/ENOLA.jpeg" class="img-fluid portfolio-img" width="200" height="300" alt="Project 3 preview image">
           <div class="portfolio-info">
@@ -189,9 +189,16 @@
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
+   <script>
+    window.addEventListener("load", () => {
+      document.getElementById("loader").style.display = "none";
+    });
+  </script>
+
 </body>
 
 </html>
+
 
 
 
