--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
+
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>My Portfolio - Guillermo Camacho</title>
-  <meta name="description" content="Personal portfolio and resume website">
-  <meta name="keywords" content="portfolio, resume, projects, bootstrap, web design">
-
+  <title>My Portfolio</title>
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -28,15 +30,21 @@
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
 
+  <!-- Your custom CSS (REQUIRED FOR THE ASSIGNMENT) -->
+  <link href="assets/css/custom.css" rel="stylesheet">
+
 </head>
-  
+
 <body class="index-page">
-    <div id="loader">
+
+  <!-- Loader (Correct Placement) -->
+  <div id="loader">
     <div class="loader-circle"></div>
   </div>
 
+  <!-- ======= Header ======= -->
   <header id="header" class="header d-flex align-items-center sticky-top">
-    <div class="container-fluid d-flex align-items-center justify-content-between">
+    <div class="container-fluid d-flex justify-content-between align-items-center">
 
       <a href="index.html" class="logo d-flex align-items-center">
         <h1 class="sitename">MyPortfolio</h1>
@@ -44,158 +52,132 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
+          <li><a href="index.html" class="active">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#resume">Resume</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
+
     </div>
   </header>
 
   <main class="main">
 
     <!-- ======= About Section ======= -->
-    <section id="about" class="about section">
+    <section id="about" class="section">
       <div class="container" data-aos="fade-up">
-        <div class="col-lg-7 portfolio-info card-surface">
-        <h2>About Me</h2>
-        <p>I'm a passionate Materials Engineering student at Universidad Politécnica de Madrid (UPM) with a deep interest
-          in structural materials like metals and composites. My curiosity drives me to explore fields such as programming,
-          design, and music. I enjoy developing creative projects that combine technical precision with artistic expression.
-        </p>
-           <a class="btn-custom btn-animated" href="#portfolio">See my work</a>
+        <div class="row align-items-center">
+
+          <!-- APPLY card-surface HERE -->
+          <div class="col-lg-7 portfolio-info card-surface fade-in">
+            <h3>About Me</h3>
+            <p>Hello, I'm <b>Guillermo Camacho</b>. I'm a materials engineering student...</p>
+            <a class="btn-custom btn-animated" href="#portfolio">See my work</a>
+          </div>
+
+          <div class="col-lg-5 text-center text-lg-end">
+            <!-- You can add an image here if you want -->
+          </div>
+
+        </div>
       </div>
     </section>
-    <!-- End About Section -->
 
     <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume section light-background">
+    <section id="resume" class="section card-surface fade-in">
       <div class="container" data-aos="fade-up">
         <h2>Resume</h2>
+        <p>Your resume content...</p>
+      </div>
+    </section>
 
-        <div class="row">
-          <div class="col-lg-6">
-              <section id="resume" class="resume section card-surface">
-            <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
-              <!-- TODO: Replace with your info -->
-              <h4>Materials engineering</h4>
-              <h5>2021– Ongoing</h5>
-              <p><em>Universidad Politecnica de Madrid(UPM)</em></p>
-              <p>Materials Science and Engineering is an interdisciplinary field of knowledge that covers the study of the structure, properties, processing, and applications of all types of materials</p>
-            </div>
-            <div class="resume-item">
-              <h4>Monitor title</h4>
-              <h5>2020</h5>
-              <p><em>Casa Scout de Madrid</em></p>
-              <p>certifies professionals to organize, promote and evaluate recreational and educational activities aimed at children and young people in non-formal environments such as camps, youth centers and extracurricular activities.</p>
+    <!-- ======= Portfolio Section ======= -->
+    <section id="portfolio" class="portfolio section card-surface fade-in">
+      <div class="container" data-aos="fade-up">
+
+        <h2>Portfolio</h2>
+        <p>Here are some of my projects and works.</p>
+
+        <div class="row gy-4">
+
+          <!-- Portfolio Item 1 -->
+          <div class="col-lg-4 col-md-6 portfolio-item card-surface fade-in">
+            <div class="portfolio-content h-100">
+              <img src="assets/img/RUG.jpeg" class="img-fluid portfolio-img" alt="Project 1">
+              <div class="portfolio-info">
+                <h4>Album cover rug</h4>
+                <p>Description goes here...</p>
+              </div>
             </div>
           </div>
 
-          <div class="col-lg-6">
-              <section id="resume" class="resume section card-surface">
-            <h3 class="resume-title">Experience</h3>
-            <div class="resume-item">
-              <h4>Camp Monitor</h4>
-              <h5>2025 – 2025</h5>
-              <p><em>Pebetero Gruop</em></p>
-              <p>Organize and implement activities for children aged 9 to 14. Making them learn while having fun</p>
+          <!-- Portfolio Item 2 -->
+          <div class="col-lg-4 col-md-6 portfolio-item card-surface fade-in">
+            <div class="portfolio-content h-100">
+              <img src="assets/img/VINYL.jpeg" class="img-fluid portfolio-img" alt="Project 2">
+              <div class="portfolio-info">
+                <h4>My vinyl collection</h4>
+                <p>Description goes here...</p>
+              </div>
             </div>
           </div>
+
+          <!-- Portfolio Item 3 -->
+          <div class="col-lg-4 col-md-6 portfolio-item card-surface fade-in">
+            <div class="portfolio-content h-100">
+              <img src="assets/img/ENOLA.jpeg" class="img-fluid portfolio-img" alt="Project 3">
+              <div class="portfolio-info">
+                <h4>Enola</h4>
+                <p>Description goes here...</p>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
-    <!-- End Resume Section -->
 
-    <!-- ======= Portfolio Section ======= -->
-<section id="portfolio" class="portfolio section card-surface fade-in">
-  <div class="container" data-aos="fade-up">
-    <h2>Portfolio</h2>
-    <p>Here are some of my projects and works.</p>
-
-    <div class="row gy-4 isotope-container">
-
-      <!-- Portfolio Item 1 -->
-      <div class="col-lg-4 col-md-6 portfolio-item">
-          <section id="portfolio" class="portfolio section card-surface">
-        <div class="portfolio-content h-100">
-          <img src="assets/img/RUG.jpeg" class="img-fluid portfolio-img" width="200" height="300" alt="Project 1 preview image">
-          <div class="portfolio-info">
-            <h4>Album cover rug</h4>
-            <p><!-- TODO: Short description (2–3 sentences) --></p>
-          </div>
-        </div>
+    <!-- ======= Testimonials Section ======= -->
+    <section id="testimonials" class="testimonials section card-surface fade-in">
+      <div class="container" data-aos="fade-up">
+        <h2>Testimonials</h2>
+        <p>Your testimonials...</p>
       </div>
-
-      <!-- Portfolio Item 2 -->
-      <div class="col-lg-4 col-md-6 portfolio-item">
-          <section id="portfolio" class="portfolio section card-surface">
-        <div class="portfolio-content h-100">
-          <img src="assets/img/VINYL.jpeg" class="img-fluid portfolio-img" width="200" height="300" alt="Project 2 preview image">
-          <div class="portfolio-info">
-            <h4>My vinyl collection</h4>
-            <p><!-- TODO: Short description (2–3 sentences) --></p>
-          </div>
-        </div>
-      </div>
-
-      <!-- Portfolio Item 3 -->
-      <div class="col-lg-4 col-md-6 portfolio-item">
-          <section id="portfolio" class="portfolio section card-surface">
-        <div class="portfolio-content h-100">
-          <img src="assets/img/ENOLA.jpeg" class="img-fluid portfolio-img" width="200" height="300" alt="Project 3 preview image">
-          <div class="portfolio-info">
-            <h4>Enola</h4>
-            <p><!-- TODO: Short description (2–3 sentences) --></p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</section>
-    <!-- End Portfolio Section -->
+    </section>
 
   </main>
 
   <footer id="footer" class="footer light-background">
-    <div class="container">
-      <div class="copyright text-center">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">MyPortfolio</strong> <span>All Rights Reserved</span></p>
-      </div>
-      <div class="social-links d-flex justify-content-center">
-        <!-- TODO: Add your real social links -->
-        <a href="#"><i class="bi bi-twitter-x"></i></a>
-        <a href="#"><i class="bi bi-instagram"></i></a>
-        <a href="#"><i class="bi bi-linkedin"></i></a>
-      </div>
+    <div class="container text-center">
+      <p>© <span>Copyright</span> <strong class="sitename">MyPortfolio</strong> All Rights Reserved</p>
     </div>
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">
+    <i class="bi bi-arrow-up-short"></i>
+  </a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
+  <!-- Loader hide script -->
+  <script>
+    window.addEventListener("load", () => {
+      document.getElementById("loader").style.display = "none";
+    });
+  </script>
+
 </body>
-
 </html>
-
-
-
-
-
-
 
 
 
