Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="container" data-aos="fade-up">
         <div class="col-lg-7 portfolio-info card-surface">
         <h2>About Me</h2>
-        <p>I'm a passionate Materials Engineering student at Universidad Politécnica de Madrid (UPM) with a deep interest
+        <p>I'm Guillermo Camacho, a passionate Materials Engineering student at Universidad Politécnica de Madrid (UPM) with a deep interest
           in structural materials like metals and composites. My curiosity drives me to explore fields such as programming,
           design, and music. I enjoy developing creative projects that combine technical precision with artistic expression.
         </p>
@@ -187,6 +187,7 @@
 </body>
 
 </html>
+
 
 
 
