--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/custom.css" rel="stylesheet">
 
 </head>
 
@@ -187,6 +188,7 @@
 </body>
 
 </html>
+
 
 
 
