--- a/index.html
+++ b/index.html
@@ -69,13 +69,12 @@
     <!-- End About Section -->
 
     <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume section light-background">
+    <section id="resume" class="resume section light-background card surface">
       <div class="container" data-aos="fade-up">
         <h2>Resume</h2>
 
         <div class="row">
           <div class="col-lg-6">
-              <section id="resume" class="resume section card-surface">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <!-- TODO: Replace with your info -->
@@ -93,7 +92,6 @@
           </div>
 
           <div class="col-lg-6">
-              <section id="resume" class="resume section card-surface">
             <h3 class="resume-title">Experience</h3>
             <div class="resume-item">
               <h4>Camp Monitor</h4>
@@ -117,7 +115,6 @@
 
       <!-- Portfolio Item 1 -->
       <div class="col-lg-4 col-md-6 portfolio-item">
-          <section id="portfolio" class="portfolio section card-surface">
         <div class="portfolio-content h-100">
           <img src="assets/img/RUG.jpeg" class="img-fluid portfolio-img" width="200" height="300" alt="Project 1 preview image">
           <div class="portfolio-info">
@@ -129,7 +126,6 @@
 
       <!-- Portfolio Item 2 -->
       <div class="col-lg-4 col-md-6 portfolio-item">
-          <section id="portfolio" class="portfolio section card-surface">
         <div class="portfolio-content h-100">
           <img src="assets/img/VINYL.jpeg" class="img-fluid portfolio-img" width="200" height="300" alt="Project 2 preview image">
           <div class="portfolio-info">
@@ -141,7 +137,6 @@
 
       <!-- Portfolio Item 3 -->
       <div class="col-lg-4 col-md-6 portfolio-item">
-          <section id="portfolio" class="portfolio section card-surface">
         <div class="portfolio-content h-100">
           <img src="assets/img/ENOLA.jpeg" class="img-fluid portfolio-img" width="200" height="300" alt="Project 3 preview image">
           <div class="portfolio-info">
@@ -188,6 +183,7 @@
 </body>
 
 </html>
+
 
 
 
