--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume section light-background card surface">
-      <div class="container" data-aos="fade-up">
+      <div class="container" data-aos="fade-up card-surface">
         <h2>Resume</h2>
 
         <div class="row">
@@ -114,7 +114,7 @@
     <div class="row gy-4 isotope-container">
 
       <!-- Portfolio Item 1 -->
-      <div class="col-lg-4 col-md-6 portfolio-item">
+      <div class="col-lg-4 col-md-6 portfolio-item card-surface">
         <div class="portfolio-content h-100">
           <img src="assets/img/RUG.jpeg" class="img-fluid portfolio-img" width="200" height="300" alt="Project 1 preview image">
           <div class="portfolio-info">
@@ -125,7 +125,7 @@
       </div>
 
       <!-- Portfolio Item 2 -->
-      <div class="col-lg-4 col-md-6 portfolio-item">
+      <div class="col-lg-4 col-md-6 portfolio-item card-surface">
         <div class="portfolio-content h-100">
           <img src="assets/img/VINYL.jpeg" class="img-fluid portfolio-img" width="200" height="300" alt="Project 2 preview image">
           <div class="portfolio-info">
@@ -136,7 +136,7 @@
       </div>
 
       <!-- Portfolio Item 3 -->
-      <div class="col-lg-4 col-md-6 portfolio-item">
+      <div class="col-lg-4 col-md-6 portfolio-item card-surface">
         <div class="portfolio-content h-100">
           <img src="assets/img/ENOLA.jpeg" class="img-fluid portfolio-img" width="200" height="300" alt="Project 3 preview image">
           <div class="portfolio-info">
@@ -183,6 +183,7 @@
 </body>
 
 </html>
+
 
 
 
