--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
     <!-- End About Section -->
 
     <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume section light-background card surface">
+    <section id="resume" class="resume section light-background card-surface">
       <div class="container" data-aos="fade-up card-surface">
         <h2>Resume</h2>
 
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-6 card-surface">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <!-- TODO: Replace with your info -->
@@ -91,7 +91,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6">
+          <div class="col-lg-6 card-surface">
             <h3 class="resume-title">Experience</h3>
             <div class="resume-item">
               <h4>Camp Monitor</h4>
@@ -183,6 +183,7 @@
 </body>
 
 </html>
+
 
 
 
