--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about section">
-      <div class="container" data-aos="fade-up">
-        <div class="col-lg-7 portfolio-info card-surface">
+      <div class="container" data-aos="fade-up" data-aos-duration="1000">
+        <div class="col-lg-7 portfolio-info card-surface" style="background-color: #eeeeee;">
         <h2>About Me</h2>
         <p>I'm Guillermo Camacho, a passionate Materials Engineering student at Universidad Politécnica de Madrid (UPM) with a deep interest
           in structural materials like metals and composites. My curiosity drives me to explore fields such as programming,
@@ -69,12 +69,12 @@
     <!-- End About Section -->
 
     <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume section light-background card-surface">
-      <div class="container" data-aos="fade-up card-surface">
+    <section id="resume" class="resume section light-background">
+      <div class="container" data-aos="fade-up  data-aos-duration="1000">
         <h2>Resume</h2>
 
         <div class="row">
-          <div class="col-lg-6 card-surface">
+          <div class="col-lg-6 card-surface" style="background-color: #eeeeee;">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <!-- TODO: Replace with your info -->
@@ -91,7 +91,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 card-surface">
+          <div class="col-lg-6 card-surface" style="background-color: #eeeeee;">
             <h3 class="resume-title">Experience</h3>
             <div class="resume-item">
               <h4>Camp Monitor</h4>
@@ -107,14 +107,14 @@
 
     <!-- ======= Portfolio Section ======= -->
 <section id="portfolio" class="portfolio section card-surface">
-  <div class="container" data-aos="fade-up">
+  <div class="container" data-aos="fade-up" data-aos-duration="1000">
     <h2>Portfolio</h2>
     <p>Here are some of my projects and works.</p>
 
     <div class="row gy-4 isotope-container">
 
       <!-- Portfolio Item 1 -->
-      <div class="col-lg-4 col-md-6 portfolio-item card-surface">
+      <div class="col-lg-4 col-md-6 portfolio-item card-surface" style="background-color: #eeeeee;">
         <div class="portfolio-content h-100">
           <img src="assets/img/RUG.jpeg" class="img-fluid portfolio-img" width="200" height="300" alt="Project 1 preview image">
           <div class="portfolio-info">
@@ -125,7 +125,7 @@
       </div>
 
       <!-- Portfolio Item 2 -->
-      <div class="col-lg-4 col-md-6 portfolio-item card-surface">
+      <div class="col-lg-4 col-md-6 portfolio-item card-surface" style="background-color: #eeeeee;">
         <div class="portfolio-content h-100">
           <img src="assets/img/VINYL.jpeg" class="img-fluid portfolio-img" width="200" height="300" alt="Project 2 preview image">
           <div class="portfolio-info">
@@ -136,7 +136,7 @@
       </div>
 
       <!-- Portfolio Item 3 -->
-      <div class="col-lg-4 col-md-6 portfolio-item card-surface">
+      <div class="col-lg-4 col-md-6 portfolio-item card-surface" style="background-color: #eeeeee;">
         <div class="portfolio-content h-100">
           <img src="assets/img/ENOLA.jpeg" class="img-fluid portfolio-img" width="200" height="300" alt="Project 3 preview image">
           <div class="portfolio-info">
@@ -183,6 +183,7 @@
 </body>
 
 </html>
+
 
 
 
