--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 </head>
 
 <body class="index-page">
+  <div id="preloader"></div>
 
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container-fluid d-flex align-items-center justify-content-between">
@@ -183,6 +184,7 @@
 </body>
 
 </html>
+
 
 
 
