--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about section">
-      <div class="container >
+      <div class="container data-aos=" fade-up  data-aos-duration="2000" >
         <div class="col-lg-7 portfolio-info card-surface" style="background-color: #eeeeee;">
         <h2>About Me</h2>
         <p>I'm Guillermo Camacho, a passionate Materials Engineering student at Universidad Politécnica de Madrid (UPM) with a deep interest
@@ -184,6 +184,7 @@
 </body>
 
 </html>
+
 
 
 
