--- a/index.html
+++ b/index.html
@@ -151,7 +151,26 @@
   </div>
 </section>
     <!-- End Portfolio Section -->
+<section  id="calculator" class="calculator section card-surface">
+       <div class="container" data-aos="fade-up" data-aos-duration="1000">
+         <div class="row gy-4 isotope-container">
 
+  <div class="col-lg-4 col-md-6 portfolio-item card-surface"> 
+      <a href="resistor-calculator/index.html" title="Resistor Color Code Calculator" class="glightbox">
+          <div class="portfolio-content h-100">
+              <img src="assets/img/resistor-placeholder.jpg" class="img-fluid" alt="Resistor Color Code Calculator Screenshot">
+              <div class="portfolio-info">
+                  <h4>Resistor Color Code Calculator</h4>
+                  <p>A simple, interactive UI created using HTML, CSS, and vanilla JavaScript to calculate resistance based on color bands.</p>
+              </div>
+          </div>
+      </a>
+  </div>
+  
+  </div>
+</section>
+  
+       
   </main>
 
   <footer id="footer" class="footer light-background">
@@ -184,6 +203,7 @@
 </body>
 
 </html>
+
 
 
 
