--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="col-lg-6 portfolio-item card-surface" style="background-color: #eeeeee;"> 
                 <a href="resistor-calculator/index.html" title="Resistor Color Code Calculator" class="glightbox">
                     <div class="portfolio-content h-100">
-                        <img src="assets/img/resisto.png" class="img-fluid" alt="Resistor Color Code Calculator Screenshot">
+                        <img src="assets/img/40810410.png" class="img-fluid" alt="Resistor Color Code Calculator Screenshot">
                         <div class="portfolio-info">
                             <h4>Launch Calculator UI</h4>
                             <p>Click to open the interactive JavaScript application.</p>
@@ -181,6 +181,7 @@
 </body>
 
 </html>
+
 
 
 
