--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                     <div class="portfolio-content h-100">
                         <img src="assets/img/40810410.png" class="img-fluid" alt="Resistor Color Code Calculator Screenshot">
                         <div class="portfolio-info">
-                            <h4>Launch Calculator UI</h4>
-                            <p>Click to open the interactive JavaScript application.</p>
+                            <h4>Launch Calculator </h4>
+                          
                         </div>
                     </div>
                 </a>
@@ -181,6 +181,7 @@
 </body>
 
 </html>
+
 
 
 
