--- a/resistor-calculator/index.html
+++ b/resistor-calculator/index.html
@@ -13,7 +13,7 @@
 
         <div class="controls">
             <label for="band1">Band 1 (First Digit):</label>
-            <select id="band1" onchange="calculateResistance()">
+            <select id="band1" >
                 <option value="0">Black (0)</option>
                 <option value="1" selected>Brown (1)</option>
                 <option value="2">Red (2)</option>
@@ -27,7 +27,7 @@
             </select>
 
             <label for="band2">Band 2 (Second Digit):</label>
-            <select id="band2" onchange="calculateResistance()">
+            <select id="band2" >
                 <option value="0">Black (0)</option>
                 <option value="1">Brown (1)</option>
                 <option value="2" selected>Red (2)</option>
@@ -41,7 +41,7 @@
             </select>
 
             <label for="multiplier">Band 3 (Multiplier):</label>
-            <select id="multiplier" onchange="calculateResistance()">
+            <select id="multiplier" >
                 <option value="1">Black (x1)</option>
                 <option value="10">Brown (x10)</option>
                 <option value="100" selected>Red (x100)</option>
@@ -55,7 +55,7 @@
             </select>
 
             <label for="tolerance">Band 4 (Tolerance):</label>
-            <select id="tolerance" onchange="calculateResistance()">
+            <select id="tolerance" >
                 <option value="0.01">Brown (±1%)</option>
                 <option value="0.02" selected>Red (±2%)</option>
                 <option value="0.005">Green (±0.5%)</option>
