--- a/index.html
+++ b/index.html
@@ -133,25 +133,27 @@
       </div>
   </div>
 </section>
-    <section id="calculator" class="calculator section light-background" data-aos="fade-up" data-aos-duration="1000">
-    <div class="container">
-        <h2>Resistor Color Code Calculator</h2>
-        <p>This is an interactive user interface project created to calculate resistance values from color bands, showcasing my skills in HTML, CSS, and JavaScript.</p>
-        
-        <div class="row justify-content-center">
-            <div class="col-lg-6 portfolio-item card-surface" style="background-color: #eeeeee;"> 
-                <a href="resistor-calculator/index.html" title="Resistor Color Code Calculator" class="glightbox">
-                    <div class="portfolio-content h-100">
-                        <img src="assets/img/40810410.png" class="img-fluid" alt="Resistor Color Code Calculator Screenshot">
-                        <div class="portfolio-info">
-                            <h4>Launch Calculator </h4>
-                          
-                        </div>
-                    </div>
-                </a>
+<section id="calculator" class="calculator section light-background" data-aos="fade-up" data-aos-duration="1000">
+  <div class="container">
+    <h2>Resistor Color Code Calculator</h2>
+    <p>This is an interactive user interface project created to calculate resistance values from color bands, showcasing my skills in HTML, CSS, and JavaScript.</p>
+
+    <div class="row justify-content-center">
+      <div class="col-lg-6 portfolio-item card-surface" style="background-color: #eeeeee;">
+
+        <!-- Correct link -->
+        <a href="resistor-calculator/index.html" title="Resistor Color Code Calculator">
+          <div class="portfolio-content h-100">
+            <img src="assets/img/40810410.png" class="img-fluid" alt="Resistor Color Code Calculator Screenshot">
+            <div class="portfolio-info">
+              <h4>Launch Calculator</h4>
             </div>
-        </div>
+          </div>
+        </a>
+
+      </div>
     </div>
+  </div>
 </section>
 </main>
 
@@ -181,6 +183,7 @@
 </body>
 
 </html>
+
 
 
 
