--- a/index.html
+++ b/index.html
@@ -142,14 +142,9 @@
       <div class="col-lg-6 portfolio-item card-surface" style="background-color: #eeeeee;">
 
         <!-- Correct link -->
-        <a href="resistor-calculator/index.html" title="Resistor Color Code Calculator">
-          <div class="portfolio-content h-100">
-            <img src="assets/img/40810410.png" class="img-fluid" alt="Resistor Color Code Calculator Screenshot">
-            <div class="portfolio-info">
-              <h4>Launch Calculator</h4>
-            </div>
-          </div>
-        </a>
+       <button class="btn btn-primary w-100" data-bs-toggle="modal" data-bs-target="#calculatorModal">
+  Launch Calculator
+</button>
 
       </div>
     </div>
@@ -180,9 +175,72 @@
 
   <script src="assets/js/main.js"></script>
 
+  <!-- Resistor Calculator Modal -->
+<div class="modal fade" id="calculatorModal" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-content card-surface">
+      <div class="modal-header">
+        <h5 class="modal-title">Resistor Color Code Calculator</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+
+      <div class="modal-body">
+
+        <!-- Band mode selector -->
+        <div class="mb-3">
+          <label class="form-label">Select mode:</label>
+          <select id="mode" class="form-select">
+            <option value="4">4-Band</option>
+            <option value="5">5-Band</option>
+          </select>
+        </div>
+
+        <!-- Calculator form -->
+        <div id="calculator-form" class="row g-3">
+
+          <div class="col-md-4">
+            <label class="form-label">Band 1</label>
+            <select id="band1" class="form-select digit-band"></select>
+          </div>
+
+          <div class="col-md-4">
+            <label class="form-label">Band 2</label>
+            <select id="band2" class="form-select digit-band"></select>
+          </div>
+
+          <div class="col-md-4" id="band3-container" style="display:none;">
+            <label class="form-label">Band 3</label>
+            <select id="band3" class="form-select digit-band"></select>
+          </div>
+
+          <div class="col-md-6">
+            <label class="form-label">Multiplier</label>
+            <select id="multiplier" class="form-select"></select>
+          </div>
+
+          <div class="col-md-6">
+            <label class="form-label">Tolerance</label>
+            <select id="tolerance" class="form-select"></select>
+          </div>
+
+        </div>
+
+        <!-- Result -->
+        <h4 class="text-center mt-4">Resistance: <span id="result">—</span></h4>
+
+      </div>
+
+      <div class="modal-footer">
+        <button class="btn btn-primary" onclick="calculateResistor()">Calculate</button>
+      </div>
+    </div>
+  </div>
+</div>
+  
 </body>
 
 </html>
+
 
 
 
